# open-gl-rubiks-cube

./: CMakeLists.txt  index.html
include/: Angel.h  CheckError.h
shaders/: fshader.glsl  vshader.glsl
src/: InitShader.cpp  animations.cpp  circle.cpp  cube.cpp  drawable.cpp  inputfunctions.cpp  rectangle.cpp  source.cpp
